Update the test pages to add events into their proper positions on the page

--- a/ajaxtest.html
+++ b/ajaxtest.html
@@ -7,6 +7,16 @@
 	<script type='text/javascript' src="ajaxtest.js"></script>
 </head>
 <body onload="retrieveEvents()">
-	<div id="here"></div>
+	<div id="here">
+		<div class="event" id="1362468400">
+			<div class="title">Test Event Title</div>
+		</div>
+		<div class="event" id="1362468405">
+			<div class="title">Test Event 2 Title</div>
+		</div>
+		<div class="event" id="1362668402">
+			<div class="title">Test Event 3 Title</div>
+		</div>
+	</div>
 </body>
 </html>
