Begin using parameters in the retrieveEvents function

--- a/ajaxtest.html
+++ b/ajaxtest.html
@@ -6,7 +6,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type='text/javascript' src="ajaxtest.js"></script>
 </head>
-<body onload="retrieveEvents()">
+<body onload="retrieveEvents(1234, 0, 200000000000000, 'vucf')">
 	<div id="here">
 		<div class="event" id="1362468400">
 			<div class="title">Test Event Title</div>
